tests/snapshots/fixtures_snapshot__fixtures__raw_data__csharp__date_format_b8601da_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "B8601DA",
    "B8601DA8",
    "B8601DA9",
    "B8601DA10"
  ],
  "row_count": 19,
  "rows": [
    [
      {
        "kind": "date",
        "value": -138061.0
      },
      {
        "kind": "date",
        "value": -138061.0
      },
      {
        "kind": "date",
        "value": -138061.0
      },
      {
        "kind": "date",
        "value": -138061.0
      }
    ],
    [
      {
        "kind": "date",
        "value": -137697.0
      },
      {
        "kind": "date",
        "value": -137697.0
      },
      {
        "kind": "date",
        "value": -137697.0
      },
      {
        "kind": "date",
        "value": -137697.0
      }
    ],
    [
      {
        "kind": "date",
        "value": -1.0
      },
      {
        "kind": "date",
        "value": -1.0
      },
      {
        "kind": "date",
        "value": -1.0
      },
      {
        "kind": "date",
        "value": -1.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 0.0
      },
      {
        "kind": "date",
        "value": 0.0
      },
      {
        "kind": "date",
        "value": 0.0
      },
      {
        "kind": "date",
        "value": 0.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 3652.0
      },
      {
        "kind": "date",
        "value": 3652.0
      },
      {
        "kind": "date",
        "value": 3652.0
      },
      {
        "kind": "date",
        "value": 3652.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 3653.0
      },
      {
        "kind": "date",
        "value": 3653.0
      },
      {
        "kind": "date",
        "value": 3653.0
      },
      {
        "kind": "date",
        "value": 3653.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 2936183.0
      },
      {
        "kind": "date",
        "value": 2936183.0
      },
      {
        "kind": "date",
        "value": 2936183.0
      },
      {
        "kind": "date",
        "value": 2936183.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 2936547.0
      },
      {
        "kind": "date",
        "value": 2936547.0
      },
      {
        "kind": "date",
        "value": 2936547.0
      },
      {
        "kind": "date",
        "value": 2936547.0
      }
    ],
    [
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "missing",
        "value": null
      }
    ],
    [
      {
        "kind": "date",
        "value": 21883.0
      },
      {
        "kind": "date",
        "value": 21883.0
      },
      {
        "kind": "date",
        "value": 21883.0
      },
      {
        "kind": "date",
        "value": 21883.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 21847.0
      },
      {
        "kind": "date",
        "value": 21847.0
      },
      {
        "kind": "date",
        "value": 21847.0
      },
      {
        "kind": "date",
        "value": 21847.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 21814.0
      },
      {
        "kind": "date",
        "value": 21814.0
      },
      {
        "kind": "date",
        "value": 21814.0
      },
      {
        "kind": "date",
        "value": 21814.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 21780.0
      },
      {
        "kind": "date",
        "value": 21780.0
      },
      {
        "kind": "date",
        "value": 21780.0
      },
      {
        "kind": "date",
        "value": 21780.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 21745.0
      },
      {
        "kind": "date",
        "value": 21745.0
      },
      {
        "kind": "date",
        "value": 21745.0
      },
      {
        "kind": "date",
        "value": 21745.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 21713.0
      },
      {
        "kind": "date",
        "value": 21713.0
      },
      {
        "kind": "date",
        "value": 21713.0
      },
      {
        "kind": "date",
        "value": 21713.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 21679.0
      },
      {
        "kind": "date",
        "value": 21679.0
      },
      {
        "kind": "date",
        "value": 21679.0
      },
      {
        "kind": "date",
        "value": 21679.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 21648.0
      },
      {
        "kind": "date",
        "value": 21648.0
      },
      {
        "kind": "date",
        "value": 21648.0
      },
      {
        "kind": "date",
        "value": 21648.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 21610.0
      },
      {
        "kind": "date",
        "value": 21610.0
      },
      {
        "kind": "date",
        "value": 21610.0
      },
      {
        "kind": "date",
        "value": 21610.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 21581.0
      },
      {
        "kind": "date",
        "value": 21581.0
      },
      {
        "kind": "date",
        "value": 21581.0
      },
      {
        "kind": "date",
        "value": 21581.0
      }
    ]
  ]
}
